# multisig-vault

./: .gitignore  LICENSE  README.md
.github/workflows/: contract-ci.yml  frontend-ci.yml
backend/: .env.example  .eslintrc.js  Dockerfile  README.md  docker-compose.yml  jest.config.js  nest-cli.json  package.json  tsconfig.json
backend/src/: app.module.ts  main.ts
backend/src/common/guards/: auth.guard.ts  roles.guard.ts
backend/src/common/guards/interceptors/: logging.interceptor.ts  transform.interceptor.ts
backend/src/config/: database.config.ts
backend/src/modules/transactions/: transactions.controller.ts  transactions.module.ts  transactions.service.ts
backend/src/modules/transactions/dto/: submit-transaction.dto.ts
backend/src/modules/transactions/entities/: transaction.entity.ts
backend/src/modules/users/: users.controller.ts  users.module.ts  users.service.ts
backend/src/modules/vaults/: vaults.controller.ts  vaults.module.ts  vaults.service.ts
contract/: Cargo.toml  README.mb  README.md
contract/src/: audit.rs  lib.rs  policy.rs  recovery.rs  scheduled.rs  test.rs  timelock.rs  transaction.rs  vault.rs
frontend/: .env.example  README.md  next.config.js  package.json  tailwind.config.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/transactions/: page.tsx
frontend/src/app/vaults/: page.tsx
frontend/src/components/ui/: Button
frontend/src/components/vault/: VaultCard.tsx
frontend/src/components/wallet/: WalletConnect.tsx
frontend/src/lib/stellar/: freighter.ts
frontend/src/styles/: globals.css
(+5 files in other folders)
