[package]
name = "multisig-vault-contract"
version = "1.0.0"
edition = "2021"
authors = ["MultiSigVault Team"]
description = "Multi-signature treasury vault for DAOs and teams on Stellar Soroban"
license = "MIT"
repository = "https://github.com/MultiSigVault/multisig-vault"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = "25.1.0"

[dev_dependencies]
soroban-sdk = { version = "25.1.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = true
lto = true
codegen-units = 1

[profile.release-with-logs]
inherits = "release"
debug = 1

[features]
default = []
testutils = ["soroban-sdk/testutils"]